<resources>
    <string name="app_name">爱学习</string>
    <string name="my_homework">我的学习</string>
    <string name="weekly_mission">每周任务</string>
    <string name="code_login">验证码登录</string>
    <string name="password_login">密码登录</string>
    <string name="other_login_type">其他登录方式</string>
    <string name="one_key_login">一键登录</string>
    <string name="login_phone_hint"><font size="14">请输入报名时的手机号</font></string>
    <string name="login_or_register_phone_hint"><font size="14">请输入手机号</font></string>
    <string name="login_pass_hint"><font size="14">请输入密码</font></string>
    <string name="login_code_hint"><font size="14">请输入验证码</font></string>
    <string name="update_pass_hint"><font size="14">支持英文和数字，不少于6位</font></string>
    <string name="update_pass_again"><font size="14">再次输入密码</font></string>
    <string name="forget_password">忘记密码</string>
    <string name="get_code">获取验证码</string>
    <string name="login">登 录</string>
    <string name="class_phone_registed">手机号已被注册，是否继续使用？</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

    <string name="more_student_info">您同一账号下存在多个学员信息</string>
    <string name="please_select_a_student">请选择一个学员</string>
    <string name="select_a_student">请选择学员</string>
    <string name="study">学习</string>
    <string name="mine">我的</string>
    <string name="my_image">我的形象</string>
    <string name="extracting_dress">抽取装扮</string>
    <string name="dress_center">装扮图鉴</string>
    <string name="dress_self">装扮自己</string>
    <string name="dress_myself_explain">装扮自己说明</string>
    <string name="dress_myself_description">点击不同装扮来装扮自己吧！你装扮的形象可以使用到头像上，同时也可以在课堂随机提问和各个榜单中展现哦～</string>
    <string name="free_chance">免费机会</string>
    <string name="dress_city">装扮城</string>
    <string name="contact_us">联系客服</string>
    <string name="NEW">NEW</string>
    <string name="score"> 积分</string>
    <string name="coin99">999999+</string>
    <string name="lesson_report">课堂表现报告</string>
    <string name="all_class">所有班级</string>
    <string name="double_teacher_playback">双师课堂回放</string>
    <string name="my_coins">我的金币与积分</string>
    <string name="setting">设置</string>
    <string name="student_info">我的信息</string>
    <string name="app_updatename">修改姓名</string>
    <string name="change_avatar">更换头像</string>
    <string name="level">Lv%1$s</string>
    <string name="sex">性别</string>
    <string name="name">姓名</string>
    <string name="school">学校</string>
    <string name="switch_student">切换学员</string>
    <string name="change_pwd">修改密码</string>
    <string name="feedback">帮助反馈</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="user_service">用户协议</string>
    <string name="about_us">关于我们</string>
    <string name="version_info">版本信息</string>
    <string name="current_version">当前版本%1$s</string>
    <string name="phone">手机号</string>
    <string name="readclass">在读年级</string>
    <string name="head">头像</string>
    <string name="all_homework">全部作业</string>
    <string name="confirm">确定</string>
    <string name="active_code_digits">0123456789zxcvbnmasdfghjklqwertyuiopZXCVBNMASDFGHJKLQWERTYUIOP</string>
    <string name="cancel">取消</string>
    <string name="dress_city_explain">装扮城说明</string>
    <string name="dress_city_description">装扮城中展示所有的装扮，后续我们会继续增加多种类型的装扮哦～并且能够对多次抽中的装扮进行分解哦～</string>
    <string name="ikonw">我知道了</string>
    <string name="dress_self_unsave">装扮未保存</string>
    <string name="dress_self_unsave_description">你的装扮没有保存哦～</string>
    <string name="dress_self_unsave_nosave">不保存</string>
    <string name="dress_self_unsave_save_and_exit">保存并退出</string>
    <string name="deploy">配置</string>
    <string name="contact_service">无法登录？联系客服</string>
    <string name="contact_service_1">有问题？联系客服</string>
    <string name="reload">重新加载</string>
    <string name="guide_title">个人装扮功能上线啦！</string>
    <string name="guide_description">各位同学们，在新的功能中，你可以用金币购买装扮组装自己心仪的形象，这些形象不仅仅会在全新的作业积分榜和头像中秀出，还能够在课上随机提问和答题时秀出，快来和同学们秀出高下吧！</string>
    <string name="to_experience">去体验</string>
    <string name="show_all">查看全部</string>
    <string name="get_gift">领宝箱</string>
    <string name="resubmit">已重判</string>
    <string name="refreshwork">有更新</string>
    <string name="homework">自我巩固</string>
    <string name="go_to_modify">马上去修改</string>
    <string name="not_to_modify">暂不修改</string>
    <string name="gift_rule_1">1.现在每获得 9 颗星，就可以开启一个作业宝箱啦！</string>
    <string name="gift_rule_description">后续金币会有惊喜呦!</string>
    <string name="school_report">学情报告</string>
    <string name="double_teacher">双师课堂</string>
    <string name="lesson_num">第 %1$s 讲</string>
    <string name="lesson_num_1">第 %1$d 讲.%2$s</string>
    <string name="recently_live">近日直播</string>
    <string name="lesson_teacher">授课教师：%1$s</string>
    <string name="lesson_playback">课堂回放</string>
    <string name="start">开始</string>
    <string name="x_lesson_not_start">本讲跟踪陪练尚未启动，请耐心等待～</string>
    <string name="test_all_good_3_star">本讲出门考全对，已获得三星奖励!</string>
    <string name="pre_question">上一题</string>
    <string name="next_question">下一题</string>
    <string name="complete">完成</string>
    <string name="do_the_similar_problem">做相似题</string>
    <string name="try_again">重做一遍</string>
    <string name="learned_to">我学会了</string>
    <string name="submit">提交</string>
    <string name="save_dress">保存装扮</string>
    <string name="extracting_new_dress">抽取新装扮</string>
    <string name="recycle_dress">回收重复装扮</string>
    <string name="merge_fragment">装扮碎片合成</string>
    <string name="my_double_teacher">我的双师班级</string>
    <string name="before_the_class">未开课</string>
    <string name="in_the_class">开课中</string>
    <string name="after_the_class">已结课</string>
    <string name="retired_the_class">已退班</string>
    <string name="lesson_time">%1$s-%2$s</string>
    <string name="exit_To_Login">退出登录</string>
    <string name="self_rating_tips">自己批解答题，能提前得到\n积分和金币啦~</string>
    <string name="self_rating_small_tips">※ 老师发现乱评现象会倒扣奖励哦~</string>
    <string name="submit_self_rating">开始自评</string>
    <string name="left_to_the_next_topic">左滑到下一题</string>
    <string name="topic_list">答题目录</string>
    <string name="passed">已通过</string>
    <string name="not_passed">未通过</string>
    <string name="scroll_to_complete">继续滑动完成练习</string>
    <string name="show_paraphrase">显示释义</string>
    <string name="play_all">全文播放</string>
    <string name="read_the_passage">跟读短文</string>
    <string name="click_refresh">点击刷新</string>
    <string name="error_try_again">加载失败，请重试</string>
    <string name="error_text_net">网络加载失败</string>
    <string name="error_unstudy_task">暂无学习任务，继续加油哦~</string>
    <string name="error_text_no_class">暂无报名班级</string>
    <string name="error_text_to_get_class">快去爱学习合作机构报班吧~</string>
    <string name="error_text_no_class_2">您尚未加入任何班级</string>
    <string name="error_text_to_get_class_2">请联系机构老师索要班级码</string>
    <string name="error_text_no_test_report">暂无测评报告</string>
    <string name="error_text_no_courses_today">本日暂无课程</string>
    <string name="error_text_today_course_is_completed">收获满满，今日课程都完成了哦~</string>
    <string name="no_task">暂无任务～</string>
    <string name="to_correct">去订正</string>
    <string name="curr_lesson_no_content">本讲暂无任务</string>
    <string name="composite_scores">综合得分:</string>
    <string name="read_the_words">跟读单词</string>
    <string name="read_the_sentence">跟读句子</string>

    <string name="gold_mall">金币商城</string>
    <string name="owned_gold">当前拥有金币</string>
    <string name="head_area">头像专区</string>
    <string name="unable">可使用</string>
    <string name="gold_mall_explain">金币商城说明</string>
    <string name="use_avatar">使用此头像</string>
    <string name="no_avatars_yet">还未购买头像哦～</string>
    <string name="tips">温馨提示</string>
    <string name="agree">同意</string>

    <string name="right_now_open">立即开启</string>
    <string name="back">返回</string>
    <string name="start_to_learn">开始学习</string>
    <string name="go_check">去查看</string>

    <string name="test_report">测评报告</string>
    <string name="all_grade">全部年级</string>
    <string name="mid_test_report">期中检测报告</string>
    <string name="final_test_report">期末检测报告</string>

    <string name="study_task">学习任务</string>
    <string name="lesson_task">讲次任务</string>
    <string name="english_study">英语学习</string>
    <string name="today">今天</string>
    <string name="my_class">我的班级</string>
    <string name="loading">正在加载…</string>
    <string name="pull_up_to_see_more">上拉查看更多</string>
    <string-array name="axx_week_string_array">
        <item>日</item>
        <item>一</item>
        <item>二</item>
        <item>三</item>
        <item>四</item>
        <item>五</item>
        <item>六</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
