<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/vFlag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.gstudentlib.view.JoinClassViewStudent
        android:id="@+id/evError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="100dp"
        app:stu_error_text_net="@string/error_text_net"
        app:stu_error_text_uncontent_bottom2="@string/error_text_to_get_class_2"
        app:stu_error_text_uncontent_top1="@string/error_unstudy_task"
        app:stu_error_text_uncontent_top2="@string/error_text_no_class_2" />
</RelativeLayout>



