<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#1F243D"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="14dp"
        android:text="@string/select_a_student"/>

    <TextView
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginTop="12dp"
        android:textColor="#474D6B"
        android:text="@string/more_student_info"/>

    <TextView
        android:layout_marginLeft="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginBottom="20dp"
        android:textColor="#474D6B"
        android:text="@string/please_select_a_student"/>

</merge>
