<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rlTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_green_color"
        android:paddingTop="10dp"
        android:paddingBottom="15dp">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:src="@drawable/icon_back_white_smooth" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/all_class"
            android:textColor="@color/ysf_white"
            android:textSize="18sp" />
    </RelativeLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/srRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rlTitle"
        android:background="@drawable/top_round_12_bgcolor_shape">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </android.support.v4.widget.SwipeRefreshLayout>


    <com.gstudentlib.view.ErrorViewStudent
        android:id="@+id/evError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:error_text_net="@string/error_text_net"
        app:error_text_uncontent_bottom="@string/error_text_to_get_class"
        app:error_text_uncontent_top="@string/error_text_no_class" />

</RelativeLayout>
