<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:id="@+id/rlCoinInfo"
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <TextView
            android:id="@+id/tvOwnedGold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="46dp"
            android:layout_marginTop="25dp"
            android:text="@string/owned_gold"
            android:textColor="#051535"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/ivCoin"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_below="@+id/tvOwnedGold"
            android:layout_alignStart="@+id/tvOwnedGold"
            android:layout_marginTop="8dp"
            android:src="@drawable/icon_gold_mall_coin" />

        <TextView
            android:id="@+id/tvCoin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvOwnedGold"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@+id/ivCoin"
            tools:text="3680"
            android:textColor="#051535"
            android:textSize="32sp"
            android:textStyle="bold" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@drawable/header_gold_mall_shape">

        <TextView
            android:id="@+id/tvHeadArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:text="@string/head_area"
            android:textColor="#051535"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="invisible"/>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:button="@drawable/gold_mall_checkbox_selector"
            android:checked="false"
            android:padding="5dp"
            android:text="@string/unable"
            android:textColor="#636B7B"
            android:textSize="14sp"
            android:visibility="invisible"/>
    </RelativeLayout>
</LinearLayout>