<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".studentapp.goldmall.UsableAvatarDialogFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="53dp"
        android:background="@drawable/top_round_12_shape">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/unable"
            android:textColor="#636B7B"
            android:textSize="14sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/ll_bottom_layout"
            android:layout_marginTop="62dp"
            android:clipToPadding="false"
            android:fadingEdge="none"
            android:overScrollMode="never"
            tools:listitem="@layout/item_avatar_list" />

        <LinearLayout
            android:id="@+id/ll_bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bg_usable_avarar_sheet"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginEnd="63dp"
                android:layout_weight="1"
                android:background="@drawable/bg_go_extracting"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/main_green_color"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvUse"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/bg_dress_save"
                android:gravity="center"
                android:text="@string/use_avatar"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlAvatar"
        android:layout_width="106dp"
        android:layout_height="106dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_header_white">

        <com.gstudentlib.view.RoundCornerImageView
            android:id="@+id/ivAvatar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:src="@drawable/icon_default_header"
            app:type="circle" />
    </RelativeLayout>

</RelativeLayout>