<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F8FAFD">

    <com.gsbaselib.utils.title.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:divideVisibility="false"
        app:tvTitle="@string/setting" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/app_bg_white_lt_rt"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- 修改密码 -->
                <RelativeLayout
                    android:id="@+id/llUpdatePsw"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:background="@drawable/ripple_no_corners"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/change_pwd"
                        android:textColor="#1F243D"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/icon_arrow_blank" />

                    <View
                        android:layout_alignParentBottom="true"
                        android:background="#F1F5F9"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                </RelativeLayout>
                <!-- 帮助反馈 -->
                <RelativeLayout
                    android:id="@+id/llFeedback"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:background="@drawable/ripple_no_corners"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/feedback"
                        android:textColor="#1F243D"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/icon_arrow_blank" />

                    <View
                        android:layout_alignParentBottom="true"
                        android:background="#F1F5F9"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                </RelativeLayout>
                <!-- 隐私政策 -->
                <RelativeLayout
                    android:id="@+id/llPrivacyPolicy"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:background="@drawable/ripple_no_corners"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/privacy_policy"
                        android:textColor="#1F243D"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/icon_arrow_blank" />

                    <View
                        android:layout_alignParentBottom="true"
                        android:background="#F1F5F9"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                </RelativeLayout>
                <!-- 用户协议 -->
                <RelativeLayout
                    android:id="@+id/llUserService"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:background="@drawable/ripple_no_corners"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/user_service"
                        android:textColor="#1F243D"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/icon_arrow_blank" />

                    <View
                        android:layout_alignParentBottom="true"
                        android:background="#F1F5F9"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                </RelativeLayout>
                <!-- 关于我们 -->
                <RelativeLayout
                    android:id="@+id/llAbout"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:background="@drawable/ripple_no_corners"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/about_us"
                        android:textColor="#1F243D"
                        android:textSize="14sp" />

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/icon_arrow_blank" />

                    <View
                        android:layout_alignParentBottom="true"
                        android:background="#F1F5F9"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                </RelativeLayout>
                <!-- 版本信息 -->
                <RelativeLayout
                    android:id="@+id/llVersion"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:background="@drawable/ripple_no_corners"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp">

                    <TextView
                        android:id="@+id/tv3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/version_info"
                        android:textColor="#1F243D"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        >
                        <TextView
                            android:id="@+id/tvVersion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:gravity="end"
                            android:maxLines="1"
                            android:textColor="#1F243D"
                            android:textSize="14sp" />

                        <ImageView
                            android:layout_marginLeft="8dp"
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:src="@drawable/icon_arrow_blank" />
                    </LinearLayout>

                    <View
                        android:layout_alignParentBottom="true"
                        android:background="#F1F5F9"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                </RelativeLayout>

            </LinearLayout>
            <TextView
                android:layout_marginTop="32dp"
                android:id="@+id/btnExit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="32dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/app_bg_setting_exit"
                android:gravity="center"
                android:text="@string/exit_To_Login"
                android:textColor="#1F243D"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>